(library
 (name WorkerLib)
 (public_name playground.worker)
;  (modules Revery_worker refmtJsApi Playground Backend Syntax reason_util)
 (flags :standard -w -33 -safe-string -rectypes)
 (preprocess (pps js_of_ocaml-ppx))
 (libraries 
  bigarray 
  js_of_ocaml 
  js_of_ocaml-compiler 
  js_of_ocaml-toplevel 
  compiler-libs 
  Revery 
  playground.lib 
  reason)
 )
